code task1 done

--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -22,7 +22,8 @@
     "colab": {
       "name": "ee046211_hw3_300427259.ipynb",
       "provenance": []
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -380,7 +381,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SL_itYmqSs-c"
+        "id": "SL_itYmqSs-c",
+        "outputId": "ab0540a7-4780-4833-826a-de947215823f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# imports for the practice (you can add more if you need)\n",
@@ -389,6 +394,8 @@
         "import time\n",
         "import os\n",
         "import math\n",
+        "from tqdm.autonotebook import tqdm\n",
+        "from IPython.display import HTML, display, clear_output\n",
         "\n",
         "# pytorch\n",
         "import torch\n",
@@ -407,7 +414,16 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
       ],
       "execution_count": 1,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "  import sys\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -460,179 +476,109 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cMbbqpz54K07"
-      },
-      "source": [
-        "def batchify(data, bsz):\n",
-        "    # Divide the dataset into bsz parts.\n",
-        "    nbatch = data.size(0) // bsz\n",
-        "    # Trim off any extra elements that wouldn't cleanly fit (remainders).\n",
-        "    data = data.narrow(0, 0, nbatch * bsz)\n",
-        "    # Evenly divide the data across the bsz batches.\n",
-        "    data = data.view(bsz, -1).t().contiguous()\n",
-        "    return data.to(device)"
-      ],
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ymduOIU6ozgj",
-        "outputId": "5c112928-4453-4426-d095-872274509657"
-      },
-      "source": [
-        "datasets.WikiText2.download('./datasets')\n",
-        "tokenizer = data.utils.get_tokenizer(\"basic_english\")\n",
-        "ds_train = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train'))\n",
-        "print('train : ', len(ds_train))\n",
-        "\n",
-        "counter = Counter()\n",
-        "for line in ds_train:\n",
-        "    counter.update(tokenizer(line))\n",
-        "vocab = Vocab(counter)\n",
-        "\n",
-        "def data_process(raw_text_iter):\n",
-        "    data = [torch.tensor([vocab[token] for token in tokenizer(item)],\n",
-        "                        dtype=torch.long) for item in raw_text_iter]\n",
-        "    return torch.cat(tuple(filter(lambda t: t.numel() > 0, data)))\n",
-        "\n",
-        "ds_train, ds_valid, ds_test = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train', 'valid', 'test'))\n",
-        "train_data = data_process(ds_train)\n",
-        "val_data = data_process(ds_valid)\n",
-        "test_data = data_process(ds_test)\n",
-        "\n",
-        "batch_size = 20\n",
-        "eval_batch_size = 10\n",
-        "train_data = batchify(train_data, batch_size)\n",
-        "val_data = batchify(val_data, eval_batch_size)\n",
-        "test_data = batchify(test_data, eval_batch_size)\n",
-        "\n",
-        "print('\\n')\n",
-        "print(f'Train shape: {train_data.shape}')\n",
-        "print(f'Validation shape: {val_data.shape}')\n",
-        "print(f'Test shape: {test_data.shape}')\n",
-        "print('\\n')\n",
-        "\n",
-        "\n",
-        "def get_words(i_vector):\n",
-        "  words = ''\n",
-        "  for i in i_vector:\n",
-        "    words += vocab.itos[i]\n",
-        "    words += ' '\n",
-        "  print(words)\n",
-        "\n",
-        "get_words(train_data[1])"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "train :  36718\n",
-            "\n",
-            "\n",
-            "Train shape: torch.Size([102499, 20])\n",
-            "Validation shape: torch.Size([21441, 10])\n",
-            "Test shape: torch.Size([24185, 10])\n",
-            "\n",
-            "\n",
-            "valkyria @-@ led intersections celtic families kramer building of to , authorities odds score viewed killed the or an truth \n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
+        "id": "EVdQGasD_tEg",
+        "outputId": "0a0794d3-6ecf-4f35-f503-47fc6909935c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "jqBvtnSaSs-d",
-        "outputId": "64361d86-8b4c-46d7-f0dc-582bbaf9e90f"
+          "height": 317
+        }
       },
       "source": [
-        "text = data.Field(batch_first=True, \n",
+        "# get tokenizer\n",
+        "tokenizer = data.utils.get_tokenizer(\"basic_english\")\n",
+        "\n",
+        "# define the text field for the dataset\n",
+        "text = data.Field(sequential=True,\n",
         "                  lower=True, \n",
-        "                  tokenizer_language=tokenizer,\n",
-        "                  init_token'<sos>', \n",
-        "                  eos_token='<eos>', \n",
-        "                  )\n",
-        "datasets.WikiText2.download('./datasets')"
+        "                  tokenize=tokenizer,\n",
+        "                  init_token='<sos>', \n",
+        "                  eos_token='<eos>',\n",
+        "                  dtype=torch.long)\n",
+        "\n",
+        "# download the WikiText2 dataset\n",
+        "train_Wiki2, val_Wiki2, test_Wiki2 = datasets.WikiText2.splits(text_field=text)\n",
+        "\n",
+        "# create vocabulary\n",
+        "text.build_vocab(train_Wiki2)\n",
+        "vocab = text.vocab\n",
+        "\n",
+        "# split the data into batches\n",
+        "batch_size = 20\n",
+        "train_loader = batchify(train_Wiki2, batch_size, text)\n",
+        "val_loader = batchify(val_Wiki2, batch_size, text)\n",
+        "test_loader = batchify(test_Wiki2, batch_size, text)\n",
+        "display(HTML('<h4>Data loaders shapes:</h4>'))\n",
+        "print(f'The train dataset shape is: {train_loader.shape}')\n",
+        "print(f'The validation dataset shape is: {val_loader.shape}')\n",
+        "print(f'The test dataset shape is: {test_loader.shape}')\n",
+        "\n",
+        "# display data samples\n",
+        "display(HTML('<h4>Display data samples:</h4>'))\n",
+        "n_samples = 2\n",
+        "for i in range(n_samples):\n",
+        "    tokens = train_loader[i]\n",
+        "    print(f'Sample {i}:')\n",
+        "    print(f'Tokens: {list(tokens.cpu().numpy())}')\n",
+        "    print(\"Text: \", \" \".join([vocab.itos[t] for t in tokens]))\n",
+        "    print('\\n')\n",
+        "\n"
       ],
-      "execution_count": 5,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
+            "text/html": [
+              "<h4>Data loaders shapes:</h4>"
+            ],
             "text/plain": [
-              "'./datasets/wikitext-2/wikitext-2'"
+              "<IPython.core.display.HTML object>"
             ]
           },
           "metadata": {
             "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
+          }
         },
-        "id": "ODSVGHqwWAZX",
-        "outputId": "e5993a06-2a25-40b7-aeed-c2548f7f9c12"
-      },
-      "source": [
-        "# split to train and test\n",
-        "ds_train = torchtext.datasets.WikiText2(root='./datasets/wikitext-2/wikitext-2/', split=('train'))\n",
-        "#ds_train, ds_valid, ds_test = datasets.WikiText2.splits(TEXT, root='./datasets')\n",
-        "print('train : ', len(ds_train))\n",
-        "#print('valid : ', len(ds_valid))\n",
-        "#print('test : ', len(ds_test))"
-      ],
-      "execution_count": 6,
-      "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train :  36718\n"
+            "The train dataset shape is: torch.Size([104335, 20])\n",
+            "The validation dataset shape is: torch.Size([10908, 20])\n",
+            "The test dataset shape is: torch.Size([12310, 20])\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h4>Display data samples:</h4>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Sample 0:\n",
+            "Tokens: [3, 25, 1849, 570, 7, 5, 5, 9258, 4, 56, 0, 7, 6, 6634, 4, 6603, 6, 5, 65, 30]\n",
+            "Text:  <eos> @ settlement heavy of , , lined the she <unk> of . interception the dried . , would his\n",
+            "\n",
+            "\n",
+            "Sample 1:\n",
+            "Tokens: [12, 66, 13, 4889, 458, 8, 1045, 21, 19094, 34, 147, 4, 0, 10, 2280, 2294, 58, 35, 2438, 4064]\n",
+            "Text:  = 1 was rains ireland and starting with hairy had found the <unk> to possibility heads other which receive gift\n",
+            "\n",
+            "\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kkrZs5GJ5cZI"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r36jp_iI5ca5"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
