Task 2 done (wet)

--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -381,11 +381,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SL_itYmqSs-c",
-        "outputId": "ab0540a7-4780-4833-826a-de947215823f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "SL_itYmqSs-c"
       },
       "source": [
         "# imports for the practice (you can add more if you need)\n",
@@ -413,17 +409,8 @@
         "torch.manual_seed(seed)\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-            "  import sys\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 29,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -470,20 +457,23 @@
         "    data = data.view(bsz, -1).t().contiguous()\n",
         "    return data.to(device)"
       ],
-      "execution_count": 2,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EVdQGasD_tEg",
-        "outputId": "0a0794d3-6ecf-4f35-f503-47fc6909935c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "id": "EVdQGasD_tEg",
+        "outputId": "a378a7dd-5735-4908-98e5-0cae70d9cffb"
       },
       "source": [
+        "\"\"\"\n",
+        "Your Code Here\n",
+        "\"\"\"\n",
         "# get tokenizer\n",
         "tokenizer = data.utils.get_tokenizer(\"basic_english\")\n",
         "\n",
@@ -523,7 +513,7 @@
         "    print('\\n')\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -598,7 +588,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5fwmJAO6Ss-e"
+        "id": "5fwmJAO6Ss-e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f42cc5b0-4fdc-4aa0-bd99-905bccbe2858"
       },
       "source": [
         "\"\"\"\n",
@@ -607,11 +601,36 @@
         "def get_batch(source, i, bptt):\n",
         "    seq_len = min(bptt, len(source) - 1 - i)\n",
         "    data = source[i:i + seq_len]\n",
-        "    target = \n",
-        "    return data, target"
+        "    target = source[i + 1:i + 1 + seq_len].view(-1)\n",
+        "    return data, target\n",
+        "\n",
+        "data, target = get_batch(train_loader, i=0, bptt=2)\n",
+        "print(f'The data shape {data.cpu().numpy().shape}, The target shape {target.cpu().numpy().shape}\\n')\n",
+        "print(f\"Data:\\n {data.cpu().numpy()}\\n\")\n",
+        "print(f\"Target:\\n {target.cpu().numpy()}\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The data shape (2, 20), The target shape (40,)\n",
+            "\n",
+            "Data:\n",
+            " [[    3    25  1849   570     7     5     5  9258     4    56     0     7\n",
+            "      6  6634     4  6603     6     5    65    30]\n",
+            " [   12    66    13  4889   458     8  1045    21 19094    34   147     4\n",
+            "      0    10  2280  2294    58    35  2438  4064]]\n",
+            "\n",
+            "Target:\n",
+            " [   12    66    13  4889   458     8  1045    21 19094    34   147     4\n",
+            "     0    10  2280  2294    58    35  2438  4064  3852 13667  2962    68\n",
+            "     6 28374    39   417     0  2034    29    88 27804   350     7    17\n",
+            "  4811   902    33    20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
