Task 3 done (wet)

--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -381,7 +381,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SL_itYmqSs-c"
+        "id": "SL_itYmqSs-c",
+        "outputId": "832760f5-ae5e-43a7-c539-0f2aeff11f1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# imports for the practice (you can add more if you need)\n",
@@ -409,8 +413,17 @@
         "torch.manual_seed(seed)\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
       ],
-      "execution_count": 29,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+            "  import sys\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -457,7 +470,7 @@
         "    data = data.view(bsz, -1).t().contiguous()\n",
         "    return data.to(device)"
       ],
-      "execution_count": 30,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -465,10 +478,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 317
+          "height": 368
         },
         "id": "EVdQGasD_tEg",
-        "outputId": "a378a7dd-5735-4908-98e5-0cae70d9cffb"
+        "outputId": "1cc3fa36-a292-43d1-fc2e-9ee785b2164f"
       },
       "source": [
         "\"\"\"\n",
@@ -513,8 +526,30 @@
         "    print('\\n')\n",
         "\n"
       ],
-      "execution_count": 33,
+      "execution_count": 3,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "wikitext-2-v1.zip: 100%|██████████| 4.48M/4.48M [00:00<00:00, 60.8MB/s]"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "downloading wikitext-2-v1.zip\n",
+            "extracting\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -592,7 +627,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "143e7930-e65f-468d-9870-0e63d3c59c4c"
+        "outputId": "0502c4bb-8d92-4166-aabe-a3e0b6e570a8"
       },
       "source": [
         "\"\"\"\n",
@@ -609,7 +644,7 @@
         "print(f\"Data:\\n {data.cpu().numpy()}\\n\")\n",
         "print(f\"Target:\\n {target.cpu().numpy()}\")"
       ],
-      "execution_count": 53,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,21 +743,142 @@
         "        output = self.decoder(output)\n",
         "        return output"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6KsdV-MQSs-f"
+        "id": "6KsdV-MQSs-f",
+        "outputId": "189706a4-be26-407e-d78a-f7c864cd6cee",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 844
+        }
       },
       "source": [
         "\"\"\"\n",
         "Your Code Here\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "# Hyperparameters\n",
+        "emsize = 200              # embbeding size\n",
+        "ntokens = len(vocab.stoi) # the size of vocabulary\n",
+        "lr = 5.0                  # learning rate\n",
+        "nlayers = 2               # number of layers\n",
+        "nhid = 200                # number of hidden units\n",
+        "nhead = 2                 # number of Attention heads\n",
+        "dropout = 0.3             # dropout probability\n",
+        "step_decay = 1.0          # Period of learning rate decay\n",
+        "gamma = 0.95              # decay value for learning rate\n",
+        "\n",
+        "display(HTML('<h4>The Model Hyperparameters:</h4>'))\n",
+        "print(f'Number of tokens in the vocabulary: {ntokens}')\n",
+        "print(f'Embedding size: {emsize}')\n",
+        "print(f'Number of Attention heads: {nhead}')\n",
+        "print(f'Number of hidden uints: {nhid}')\n",
+        "print(f'Number of layers: {nlayers}')\n",
+        "print(f'Dropout: {dropout}')\n",
+        "print(f'Step decay for learning rate: {step_decay}')\n",
+        "print(f'Learning rate: {lr}')\n",
+        "print(f'Decay value for learning rate: {gamma}')\n",
+        "\n",
+        "\n",
+        "\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "model = TransformerModel(ntokens, emsize, nhead, nhid, nlayers, dropout).to(device)\n",
+        "optimizer = torch.optim.SGD(model.parameters(), lr=lr)\n",
+        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_decay, gamma=gamma)\n",
+        "\n",
+        "display(HTML('<h4>The Model:</h4>'))\n",
+        "print(model)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h4>The Model Hyperparameters:</h4>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Number of tokens in the vocabulary: 28785\n",
+            "Embedding size: 200\n",
+            "Number of Attention heads: 2\n",
+            "Number of hidden uints: 200\n",
+            "Number of layers: 2\n",
+            "Dropout: 0.3\n",
+            "Step decay for learning rate: 1.0\n",
+            "Learning rate: 5.0\n",
+            "Decay value for learning rate: 0.95\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<h4>The Model:</h4>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "TransformerModel(\n",
+            "  (pos_encoder): PositionalEncoding(\n",
+            "    (dropout): Dropout(p=0.3, inplace=False)\n",
+            "  )\n",
+            "  (transformer_encoder): TransformerEncoder(\n",
+            "    (layers): ModuleList(\n",
+            "      (0): TransformerEncoderLayer(\n",
+            "        (self_attn): MultiheadAttention(\n",
+            "          (out_proj): _LinearWithBias(in_features=200, out_features=200, bias=True)\n",
+            "        )\n",
+            "        (linear1): Linear(in_features=200, out_features=200, bias=True)\n",
+            "        (dropout): Dropout(p=0.3, inplace=False)\n",
+            "        (linear2): Linear(in_features=200, out_features=200, bias=True)\n",
+            "        (norm1): LayerNorm((200,), eps=1e-05, elementwise_affine=True)\n",
+            "        (norm2): LayerNorm((200,), eps=1e-05, elementwise_affine=True)\n",
+            "        (dropout1): Dropout(p=0.3, inplace=False)\n",
+            "        (dropout2): Dropout(p=0.3, inplace=False)\n",
+            "      )\n",
+            "      (1): TransformerEncoderLayer(\n",
+            "        (self_attn): MultiheadAttention(\n",
+            "          (out_proj): _LinearWithBias(in_features=200, out_features=200, bias=True)\n",
+            "        )\n",
+            "        (linear1): Linear(in_features=200, out_features=200, bias=True)\n",
+            "        (dropout): Dropout(p=0.3, inplace=False)\n",
+            "        (linear2): Linear(in_features=200, out_features=200, bias=True)\n",
+            "        (norm1): LayerNorm((200,), eps=1e-05, elementwise_affine=True)\n",
+            "        (norm2): LayerNorm((200,), eps=1e-05, elementwise_affine=True)\n",
+            "        (dropout1): Dropout(p=0.3, inplace=False)\n",
+            "        (dropout2): Dropout(p=0.3, inplace=False)\n",
+            "      )\n",
+            "    )\n",
+            "  )\n",
+            "  (encoder): Embedding(28785, 200)\n",
+            "  (decoder): Linear(in_features=200, out_features=28785, bias=True)\n",
+            ")\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
