--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -382,10 +382,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SL_itYmqSs-c",
-        "outputId": "832760f5-ae5e-43a7-c539-0f2aeff11f1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13a3e695-7030-4b33-8e49-7e5d1d490c0b"
       },
       "source": [
         "# imports for the practice (you can add more if you need)\n",
@@ -411,17 +411,30 @@
         "seed = 211\n",
         "np.random.seed(seed)\n",
         "torch.manual_seed(seed)\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
+        "\n",
+        "print(f'torch {torch.__version__}')\n",
+        "print('Device properties:')\n",
+        "if torch.cuda.is_available():\n",
+        "    device = torch.device(\"cuda\")\n",
+        "    gpu_data = torch.cuda.get_device_properties(0)\n",
+        "    gpu_name = gpu_data.name\n",
+        "    gpu_mem  = f'{gpu_data.total_memory * 1e-9:.02f} Gb'\n",
+        "    print(f'GPU: {gpu_name}\\nMemory: {gpu_mem}')\n",
+        "else:\n",
+        "    device = torch.device(\"cpu\")\n",
+        "    print('CPU')"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:7: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
-            "  import sys\n"
+            "torch 1.8.1+cu101\n",
+            "Device properties:\n",
+            "GPU: Tesla T4\n",
+            "Memory: 15.84 Gb\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         }
       ]
     },
@@ -470,7 +483,7 @@
         "    data = data.view(bsz, -1).t().contiguous()\n",
         "    return data.to(device)"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -481,7 +494,7 @@
           "height": 368
         },
         "id": "EVdQGasD_tEg",
-        "outputId": "1cc3fa36-a292-43d1-fc2e-9ee785b2164f"
+        "outputId": "f9a4ce14-344e-4d44-8d67-4f1c4e6d06ed"
       },
       "source": [
         "\"\"\"\n",
@@ -526,29 +539,28 @@
         "    print('\\n')\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "wikitext-2-v1.zip: 100%|██████████| 4.48M/4.48M [00:00<00:00, 60.8MB/s]"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "downloading wikitext-2-v1.zip\n",
-            "extracting\n"
+            "downloading wikitext-2-v1.zip\n"
           ],
           "name": "stdout"
         },
         {
           "output_type": "stream",
           "text": [
-            "\n"
+            "wikitext-2-v1.zip: 100%|██████████| 4.48M/4.48M [00:00<00:00, 8.71MB/s]\n"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "extracting\n"
+          ],
+          "name": "stdout"
         },
         {
           "output_type": "display_data",
@@ -627,7 +639,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0502c4bb-8d92-4166-aabe-a3e0b6e570a8"
+        "outputId": "96a672e1-6d3d-4bb5-d013-a6cf5554166a"
       },
       "source": [
         "\"\"\"\n",
@@ -644,7 +656,7 @@
         "print(f\"Data:\\n {data.cpu().numpy()}\\n\")\n",
         "print(f\"Target:\\n {target.cpu().numpy()}\")"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,18 +755,18 @@
         "        output = self.decoder(output)\n",
         "        return output"
       ],
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "6KsdV-MQSs-f",
-        "outputId": "189706a4-be26-407e-d78a-f7c864cd6cee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 844
-        }
+        },
+        "outputId": "fe55e690-745a-442c-e7cc-d9cb70202b54"
       },
       "source": [
         "\"\"\"\n",
@@ -792,7 +804,7 @@
         "display(HTML('<h4>The Model:</h4>'))\n",
         "print(model)\n"
       ],
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "display_data",
@@ -903,7 +915,7 @@
         "def evaluate(eval_model, data_source):\n",
         "    eval_model.eval() # Turn on the evaluation mode\n",
         "    total_loss = 0.\n",
-        "    ntokens = len(text_field.vocab.stoi)\n",
+        "    ntokens = len(vocab.stoi)\n",
         "    src_mask = model.generate_square_subsequent_mask(bptt).to(device)\n",
         "    with torch.no_grad():\n",
         "        for i in range(0, data_source.size(0) - 1, bptt):\n",
@@ -915,7 +927,7 @@
         "            total_loss += len(data) * criterion(output_flat, targets).item()\n",
         "    return total_loss / (len(data_source) - 1)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -931,16 +943,16 @@
         "    model.train() # Turn on the train mode\n",
         "    total_loss = 0.\n",
         "    start_time = time.time()\n",
-        "    ntokens =  #complete\n",
+        "    ntokens =  len(vocab.stoi) #complete\n",
         "    src_mask = model.generate_square_subsequent_mask(bptt).to(device)\n",
-        "    for batch, i in enumerate(range(0, train_data.size(0) - 1, bptt)):\n",
-        "        data, targets = get_batch(train_data, i, bptt)\n",
+        "    for batch, i in enumerate(range(0, train_loader.size(0) - 1, bptt)):\n",
+        "        data, targets = get_batch(train_loader, i, bptt)\n",
         "        \n",
         "        if data.size(0) != bptt:\n",
         "            src_mask = model.generate_square_subsequent_mask(data.size(0)).to(device)\n",
         "            \n",
-        "        output = # complete\n",
-        "        loss = # complete\n",
+        "        output = model(data, src_mask) # complete\n",
+        "        loss = criterion(output.view(-1, ntokens), targets) # complete\n",
         "        \n",
         "        optimizer.zero_grad()\n",
         "        loss.backward()\n",
@@ -955,14 +967,106 @@
         "            print('| epoch {:3d} | {:5d}/{:5d} batches | '\n",
         "                  'lr {:02.2f} | ms/batch {:5.2f} | '\n",
         "                  'loss {:5.2f} | ppl {:8.2f}'.format(\n",
-        "                    epoch, batch, len(train_data) // bptt, scheduler.get_last_lr()[0],\n",
+        "                    epoch, batch, len(train_loader) // bptt, scheduler.get_last_lr()[0],\n",
         "                    elapsed * 1000 / log_interval,\n",
         "                    cur_loss, math.exp(cur_loss)))\n",
         "            total_loss = 0\n",
         "            start_time = time.time()"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qm2OoFVV1I7q",
+        "outputId": "ba30b1dd-40b1-4e62-c2c1-c23a7c6a80ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "best_val_loss = float(\"inf\")\n",
+        "epochs = 3 \n",
+        "best_model = None\n",
+        "bptt=35\n",
+        "\n",
+        "for epoch in range(1, epochs + 1):\n",
+        "    epoch_start_time = time.time()\n",
+        "    train(bptt=bptt)\n",
+        "    val_loss = evaluate(model, val_loader)\n",
+        "    print('-' * 89)\n",
+        "    print('| end of epoch {:3d} | time: {:5.2f}s | valid loss {:5.2f} | '\n",
+        "          'valid ppl {:8.2f}'.format(epoch, (time.time() - epoch_start_time),\n",
+        "                                     val_loss, math.exp(val_loss)))\n",
+        "    print('-' * 89)\n",
+        "\n",
+        "    if val_loss < best_val_loss:\n",
+        "        best_val_loss = val_loss\n",
+        "        best_model = model\n",
+        "\n",
+        "    scheduler.step()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "| epoch   1 |   200/ 2981 batches | lr 5.00 | ms/batch 15.98 | loss  6.51 | ppl   671.35\n",
+            "| epoch   1 |   400/ 2981 batches | lr 5.00 | ms/batch 15.68 | loss  6.27 | ppl   529.06\n",
+            "| epoch   1 |   600/ 2981 batches | lr 5.00 | ms/batch 15.72 | loss  6.21 | ppl   499.98\n",
+            "| epoch   1 |   800/ 2981 batches | lr 5.00 | ms/batch 15.74 | loss  6.18 | ppl   484.68\n",
+            "| epoch   1 |  1000/ 2981 batches | lr 5.00 | ms/batch 15.76 | loss  6.09 | ppl   443.46\n",
+            "| epoch   1 |  1200/ 2981 batches | lr 5.00 | ms/batch 15.77 | loss  6.09 | ppl   442.85\n",
+            "| epoch   1 |  1400/ 2981 batches | lr 5.00 | ms/batch 15.82 | loss  6.06 | ppl   427.06\n",
+            "| epoch   1 |  1600/ 2981 batches | lr 5.00 | ms/batch 15.83 | loss  6.07 | ppl   434.30\n",
+            "| epoch   1 |  1800/ 2981 batches | lr 5.00 | ms/batch 15.86 | loss  6.00 | ppl   403.59\n",
+            "| epoch   1 |  2000/ 2981 batches | lr 5.00 | ms/batch 15.88 | loss  6.01 | ppl   407.70\n",
+            "| epoch   1 |  2200/ 2981 batches | lr 5.00 | ms/batch 15.91 | loss  5.91 | ppl   369.23\n",
+            "| epoch   1 |  2400/ 2981 batches | lr 5.00 | ms/batch 15.92 | loss  5.96 | ppl   386.78\n",
+            "| epoch   1 |  2600/ 2981 batches | lr 5.00 | ms/batch 15.98 | loss  5.96 | ppl   389.43\n",
+            "| epoch   1 |  2800/ 2981 batches | lr 5.00 | ms/batch 15.95 | loss  5.88 | ppl   358.15\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| end of epoch   1 | time: 48.82s | valid loss  5.75 | valid ppl   314.44\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| epoch   2 |   200/ 2981 batches | lr 4.75 | ms/batch 16.09 | loss  5.83 | ppl   340.20\n",
+            "| epoch   2 |   400/ 2981 batches | lr 4.75 | ms/batch 16.02 | loss  5.79 | ppl   327.18\n",
+            "| epoch   2 |   600/ 2981 batches | lr 4.75 | ms/batch 16.01 | loss  5.70 | ppl   298.07\n",
+            "| epoch   2 |   800/ 2981 batches | lr 4.75 | ms/batch 16.11 | loss  5.75 | ppl   313.39\n",
+            "| epoch   2 |  1000/ 2981 batches | lr 4.75 | ms/batch 16.07 | loss  5.72 | ppl   305.73\n",
+            "| epoch   2 |  1200/ 2981 batches | lr 4.75 | ms/batch 16.07 | loss  5.74 | ppl   311.01\n",
+            "| epoch   2 |  1400/ 2981 batches | lr 4.75 | ms/batch 16.10 | loss  5.75 | ppl   314.68\n",
+            "| epoch   2 |  1600/ 2981 batches | lr 4.75 | ms/batch 16.09 | loss  5.79 | ppl   326.07\n",
+            "| epoch   2 |  1800/ 2981 batches | lr 4.75 | ms/batch 16.12 | loss  5.73 | ppl   308.68\n",
+            "| epoch   2 |  2000/ 2981 batches | lr 4.75 | ms/batch 16.14 | loss  5.76 | ppl   316.36\n",
+            "| epoch   2 |  2200/ 2981 batches | lr 4.75 | ms/batch 16.14 | loss  5.66 | ppl   287.61\n",
+            "| epoch   2 |  2400/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.72 | ppl   304.91\n",
+            "| epoch   2 |  2600/ 2981 batches | lr 4.75 | ms/batch 16.20 | loss  5.74 | ppl   309.55\n",
+            "| epoch   2 |  2800/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.66 | ppl   287.43\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| end of epoch   2 | time: 49.59s | valid loss  5.63 | valid ppl   277.32\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| epoch   3 |   200/ 2981 batches | lr 4.51 | ms/batch 16.34 | loss  5.66 | ppl   285.99\n",
+            "| epoch   3 |   400/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.65 | ppl   284.89\n",
+            "| epoch   3 |   600/ 2981 batches | lr 4.51 | ms/batch 16.26 | loss  5.53 | ppl   251.22\n",
+            "| epoch   3 |   800/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.60 | ppl   271.47\n",
+            "| epoch   3 |  1000/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.57 | ppl   261.77\n",
+            "| epoch   3 |  1200/ 2981 batches | lr 4.51 | ms/batch 16.30 | loss  5.59 | ppl   268.15\n",
+            "| epoch   3 |  1400/ 2981 batches | lr 4.51 | ms/batch 16.35 | loss  5.62 | ppl   274.98\n",
+            "| epoch   3 |  1600/ 2981 batches | lr 4.51 | ms/batch 16.29 | loss  5.64 | ppl   280.20\n",
+            "| epoch   3 |  1800/ 2981 batches | lr 4.51 | ms/batch 16.32 | loss  5.57 | ppl   263.28\n",
+            "| epoch   3 |  2000/ 2981 batches | lr 4.51 | ms/batch 16.32 | loss  5.61 | ppl   273.64\n",
+            "| epoch   3 |  2200/ 2981 batches | lr 4.51 | ms/batch 16.36 | loss  5.51 | ppl   246.22\n",
+            "| epoch   3 |  2400/ 2981 batches | lr 4.51 | ms/batch 16.37 | loss  5.58 | ppl   264.00\n",
+            "| epoch   3 |  2600/ 2981 batches | lr 4.51 | ms/batch 16.37 | loss  5.59 | ppl   266.78\n",
+            "| epoch   3 |  2800/ 2981 batches | lr 4.51 | ms/batch 16.38 | loss  5.52 | ppl   249.95\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| end of epoch   3 | time: 50.26s | valid loss  5.65 | valid ppl   283.26\n",
+            "-----------------------------------------------------------------------------------------\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
