Task 5 done (wet)

--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -766,7 +766,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 844
         },
-        "outputId": "fe55e690-745a-442c-e7cc-d9cb70202b54"
+        "outputId": "1d484f5a-842f-4395-bdcf-a539cd801f95"
       },
       "source": [
         "\"\"\"\n",
@@ -804,7 +804,7 @@
         "display(HTML('<h4>The Model:</h4>'))\n",
         "print(model)\n"
       ],
-      "execution_count": 23,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -927,7 +927,7 @@
         "            total_loss += len(data) * criterion(output_flat, targets).item()\n",
         "    return total_loss / (len(data_source) - 1)"
       ],
-      "execution_count": 24,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -973,21 +973,28 @@
         "            total_loss = 0\n",
         "            start_time = time.time()"
       ],
-      "execution_count": 25,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qm2OoFVV1I7q",
-        "outputId": "ba30b1dd-40b1-4e62-c2c1-c23a7c6a80ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qm2OoFVV1I7q",
+        "outputId": "c1d166d6-df57-4bad-c8ad-0ede29fe8c9a"
       },
       "source": [
+        "CHECKPOINT_DIR = 'Checkpoints'\n",
+        "MODEL_NAME = 'LM_Transformer'\n",
+        "\n",
+        "# create checkpoint directory to save model results\n",
+        "if not os.path.isdir(CHECKPOINT_DIR):\n",
+        "    os.mkdir(CHECKPOINT_DIR)\n",
+        "\n",
         "best_val_loss = float(\"inf\")\n",
-        "epochs = 3 \n",
+        "epochs = 2 \n",
         "best_model = None\n",
         "bptt=35\n",
         "\n",
@@ -1004,65 +1011,101 @@
         "    if val_loss < best_val_loss:\n",
         "        best_val_loss = val_loss\n",
         "        best_model = model\n",
+        "        \n",
+        "        # save the model\n",
+        "        state = {\n",
+        "            'model': best_model.state_dict(),\n",
+        "            'epoch': epoch,\n",
+        "            'val_loss': val_loss,\n",
+        "            'bptt': bptt,\n",
+        "        }\n",
+        "        torch.save(state, f'{CHECKPOINT_DIR}/{MODEL_NAME}_{epoch}.pth')\n",
+        "        print('-' * 89)\n",
+        "        print('| Model was saved |')\n",
+        "        print('-' * 89)\n",
         "\n",
         "    scheduler.step()"
       ],
-      "execution_count": 27,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "| epoch   1 |   200/ 2981 batches | lr 5.00 | ms/batch 15.98 | loss  6.51 | ppl   671.35\n",
-            "| epoch   1 |   400/ 2981 batches | lr 5.00 | ms/batch 15.68 | loss  6.27 | ppl   529.06\n",
-            "| epoch   1 |   600/ 2981 batches | lr 5.00 | ms/batch 15.72 | loss  6.21 | ppl   499.98\n",
-            "| epoch   1 |   800/ 2981 batches | lr 5.00 | ms/batch 15.74 | loss  6.18 | ppl   484.68\n",
-            "| epoch   1 |  1000/ 2981 batches | lr 5.00 | ms/batch 15.76 | loss  6.09 | ppl   443.46\n",
-            "| epoch   1 |  1200/ 2981 batches | lr 5.00 | ms/batch 15.77 | loss  6.09 | ppl   442.85\n",
-            "| epoch   1 |  1400/ 2981 batches | lr 5.00 | ms/batch 15.82 | loss  6.06 | ppl   427.06\n",
-            "| epoch   1 |  1600/ 2981 batches | lr 5.00 | ms/batch 15.83 | loss  6.07 | ppl   434.30\n",
-            "| epoch   1 |  1800/ 2981 batches | lr 5.00 | ms/batch 15.86 | loss  6.00 | ppl   403.59\n",
-            "| epoch   1 |  2000/ 2981 batches | lr 5.00 | ms/batch 15.88 | loss  6.01 | ppl   407.70\n",
-            "| epoch   1 |  2200/ 2981 batches | lr 5.00 | ms/batch 15.91 | loss  5.91 | ppl   369.23\n",
-            "| epoch   1 |  2400/ 2981 batches | lr 5.00 | ms/batch 15.92 | loss  5.96 | ppl   386.78\n",
-            "| epoch   1 |  2600/ 2981 batches | lr 5.00 | ms/batch 15.98 | loss  5.96 | ppl   389.43\n",
-            "| epoch   1 |  2800/ 2981 batches | lr 5.00 | ms/batch 15.95 | loss  5.88 | ppl   358.15\n",
+            "| epoch   1 |   200/ 2981 batches | lr 5.00 | ms/batch 16.03 | loss  7.92 | ppl  2757.39\n",
+            "| epoch   1 |   400/ 2981 batches | lr 5.00 | ms/batch 15.69 | loss  6.79 | ppl   891.33\n",
+            "| epoch   1 |   600/ 2981 batches | lr 5.00 | ms/batch 15.72 | loss  6.42 | ppl   613.87\n",
+            "| epoch   1 |   800/ 2981 batches | lr 5.00 | ms/batch 15.77 | loss  6.30 | ppl   542.79\n",
+            "| epoch   1 |  1000/ 2981 batches | lr 5.00 | ms/batch 15.72 | loss  6.19 | ppl   487.92\n",
+            "| epoch   1 |  1200/ 2981 batches | lr 5.00 | ms/batch 15.80 | loss  6.16 | ppl   474.57\n",
+            "| epoch   1 |  1400/ 2981 batches | lr 5.00 | ms/batch 15.83 | loss  6.11 | ppl   450.31\n",
+            "| epoch   1 |  1600/ 2981 batches | lr 5.00 | ms/batch 15.88 | loss  6.12 | ppl   455.39\n",
+            "| epoch   1 |  1800/ 2981 batches | lr 5.00 | ms/batch 15.86 | loss  6.04 | ppl   420.90\n",
+            "| epoch   1 |  2000/ 2981 batches | lr 5.00 | ms/batch 15.88 | loss  6.04 | ppl   420.13\n",
+            "| epoch   1 |  2200/ 2981 batches | lr 5.00 | ms/batch 15.89 | loss  5.94 | ppl   378.08\n",
+            "| epoch   1 |  2400/ 2981 batches | lr 5.00 | ms/batch 15.92 | loss  5.97 | ppl   392.89\n",
+            "| epoch   1 |  2600/ 2981 batches | lr 5.00 | ms/batch 15.96 | loss  5.98 | ppl   396.06\n",
+            "| epoch   1 |  2800/ 2981 batches | lr 5.00 | ms/batch 16.01 | loss  5.89 | ppl   362.70\n",
             "-----------------------------------------------------------------------------------------\n",
-            "| end of epoch   1 | time: 48.82s | valid loss  5.75 | valid ppl   314.44\n",
+            "| end of epoch   1 | time: 48.85s | valid loss  5.80 | valid ppl   328.70\n",
             "-----------------------------------------------------------------------------------------\n",
-            "| epoch   2 |   200/ 2981 batches | lr 4.75 | ms/batch 16.09 | loss  5.83 | ppl   340.20\n",
-            "| epoch   2 |   400/ 2981 batches | lr 4.75 | ms/batch 16.02 | loss  5.79 | ppl   327.18\n",
-            "| epoch   2 |   600/ 2981 batches | lr 4.75 | ms/batch 16.01 | loss  5.70 | ppl   298.07\n",
-            "| epoch   2 |   800/ 2981 batches | lr 4.75 | ms/batch 16.11 | loss  5.75 | ppl   313.39\n",
-            "| epoch   2 |  1000/ 2981 batches | lr 4.75 | ms/batch 16.07 | loss  5.72 | ppl   305.73\n",
-            "| epoch   2 |  1200/ 2981 batches | lr 4.75 | ms/batch 16.07 | loss  5.74 | ppl   311.01\n",
-            "| epoch   2 |  1400/ 2981 batches | lr 4.75 | ms/batch 16.10 | loss  5.75 | ppl   314.68\n",
-            "| epoch   2 |  1600/ 2981 batches | lr 4.75 | ms/batch 16.09 | loss  5.79 | ppl   326.07\n",
-            "| epoch   2 |  1800/ 2981 batches | lr 4.75 | ms/batch 16.12 | loss  5.73 | ppl   308.68\n",
-            "| epoch   2 |  2000/ 2981 batches | lr 4.75 | ms/batch 16.14 | loss  5.76 | ppl   316.36\n",
-            "| epoch   2 |  2200/ 2981 batches | lr 4.75 | ms/batch 16.14 | loss  5.66 | ppl   287.61\n",
-            "| epoch   2 |  2400/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.72 | ppl   304.91\n",
-            "| epoch   2 |  2600/ 2981 batches | lr 4.75 | ms/batch 16.20 | loss  5.74 | ppl   309.55\n",
-            "| epoch   2 |  2800/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.66 | ppl   287.43\n",
             "-----------------------------------------------------------------------------------------\n",
-            "| end of epoch   2 | time: 49.59s | valid loss  5.63 | valid ppl   277.32\n",
+            "| Model was saved |\n",
             "-----------------------------------------------------------------------------------------\n",
-            "| epoch   3 |   200/ 2981 batches | lr 4.51 | ms/batch 16.34 | loss  5.66 | ppl   285.99\n",
-            "| epoch   3 |   400/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.65 | ppl   284.89\n",
-            "| epoch   3 |   600/ 2981 batches | lr 4.51 | ms/batch 16.26 | loss  5.53 | ppl   251.22\n",
-            "| epoch   3 |   800/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.60 | ppl   271.47\n",
-            "| epoch   3 |  1000/ 2981 batches | lr 4.51 | ms/batch 16.28 | loss  5.57 | ppl   261.77\n",
-            "| epoch   3 |  1200/ 2981 batches | lr 4.51 | ms/batch 16.30 | loss  5.59 | ppl   268.15\n",
-            "| epoch   3 |  1400/ 2981 batches | lr 4.51 | ms/batch 16.35 | loss  5.62 | ppl   274.98\n",
-            "| epoch   3 |  1600/ 2981 batches | lr 4.51 | ms/batch 16.29 | loss  5.64 | ppl   280.20\n",
-            "| epoch   3 |  1800/ 2981 batches | lr 4.51 | ms/batch 16.32 | loss  5.57 | ppl   263.28\n",
-            "| epoch   3 |  2000/ 2981 batches | lr 4.51 | ms/batch 16.32 | loss  5.61 | ppl   273.64\n",
-            "| epoch   3 |  2200/ 2981 batches | lr 4.51 | ms/batch 16.36 | loss  5.51 | ppl   246.22\n",
-            "| epoch   3 |  2400/ 2981 batches | lr 4.51 | ms/batch 16.37 | loss  5.58 | ppl   264.00\n",
-            "| epoch   3 |  2600/ 2981 batches | lr 4.51 | ms/batch 16.37 | loss  5.59 | ppl   266.78\n",
-            "| epoch   3 |  2800/ 2981 batches | lr 4.51 | ms/batch 16.38 | loss  5.52 | ppl   249.95\n",
+            "| epoch   2 |   200/ 2981 batches | lr 4.75 | ms/batch 16.08 | loss  5.90 | ppl   364.89\n",
+            "| epoch   2 |   400/ 2981 batches | lr 4.75 | ms/batch 16.05 | loss  5.88 | ppl   356.32\n",
+            "| epoch   2 |   600/ 2981 batches | lr 4.75 | ms/batch 16.01 | loss  5.73 | ppl   308.70\n",
+            "| epoch   2 |   800/ 2981 batches | lr 4.75 | ms/batch 16.04 | loss  5.77 | ppl   319.58\n",
+            "| epoch   2 |  1000/ 2981 batches | lr 4.75 | ms/batch 16.07 | loss  5.71 | ppl   302.12\n",
+            "| epoch   2 |  1200/ 2981 batches | lr 4.75 | ms/batch 16.05 | loss  5.75 | ppl   312.68\n",
+            "| epoch   2 |  1400/ 2981 batches | lr 4.75 | ms/batch 16.09 | loss  5.75 | ppl   312.77\n",
+            "| epoch   2 |  1600/ 2981 batches | lr 4.75 | ms/batch 16.12 | loss  5.78 | ppl   323.16\n",
+            "| epoch   2 |  1800/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.72 | ppl   305.62\n",
+            "| epoch   2 |  2000/ 2981 batches | lr 4.75 | ms/batch 16.13 | loss  5.76 | ppl   315.87\n",
+            "| epoch   2 |  2200/ 2981 batches | lr 4.75 | ms/batch 16.16 | loss  5.66 | ppl   285.76\n",
+            "| epoch   2 |  2400/ 2981 batches | lr 4.75 | ms/batch 16.18 | loss  5.73 | ppl   306.53\n",
+            "| epoch   2 |  2600/ 2981 batches | lr 4.75 | ms/batch 16.17 | loss  5.74 | ppl   309.58\n",
+            "| epoch   2 |  2800/ 2981 batches | lr 4.75 | ms/batch 16.19 | loss  5.65 | ppl   285.48\n",
             "-----------------------------------------------------------------------------------------\n",
-            "| end of epoch   3 | time: 50.26s | valid loss  5.65 | valid ppl   283.26\n",
+            "| end of epoch   2 | time: 49.61s | valid loss  5.73 | valid ppl   307.68\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "-----------------------------------------------------------------------------------------\n",
+            "| Model was saved |\n",
             "-----------------------------------------------------------------------------------------\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AaxNlkC53zsz",
+        "outputId": "64d9a48c-df2a-40a4-c7d0-ee046100f4df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# load saved model\n",
+        "best_model = TransformerModel(ntokens, emsize, nhead, nhid, nlayers, dropout).to(device)\n",
+        "state = torch.load(f'{CHECKPOINT_DIR}/{MODEL_NAME}_{epochs}.pth', map_location=device)\n",
+        "best_model.load_state_dict(state['model'])\n",
+        "\n",
+        "# evalute best model on test dataset\n",
+        "test_loss = evaluate(best_model, test_loader)\n",
+        "print('=' * 89)\n",
+        "print('| End of training | test loss {:5.2f} | test ppl {:8.2f}'.format(\n",
+        "    test_loss, math.exp(test_loss)))\n",
+        "print('=' * 89)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "=========================================================================================\n",
+            "| End of training | test loss  5.64 | test ppl   281.43\n",
+            "=========================================================================================\n"
           ],
           "name": "stdout"
         }
@@ -1101,21 +1144,47 @@
         "            words.append(word)\n",
         "    return words"
       ],
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cgcTYss8Ss-g"
+        "id": "cgcTYss8Ss-g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c29fd16b-7436-421f-b5ab-aad12cac979b"
       },
       "source": [
         "\"\"\"\n",
         "Your code Here\n",
-        "\"\"\""
+        "\"\"\"\n",
+        "nsentences = 3 # Number of sentences to generate\n",
+        "\n",
+        "for i in range(nsentences):\n",
+        "  sentence = generate(best_model, vocab, nwords=20)\n",
+        "  print(f'Sentence {i}:')\n",
+        "  print(\" \".join(sentence), '\\n')    "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sentence 0:\n",
+            ", a violent among the clock glass drama film , op . hutchings . basil , the worst only <unk> \n",
+            "\n",
+            "Sentence 1:\n",
+            ", executing guard state , the <unk> , eva originated until 1915 , and his cousin la william james wyo \n",
+            "\n",
+            "Sentence 2:\n",
+            ", who they do a deadwood nests . . he is improved residence , with their comfortable ( the east \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
